--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "lodash": "^4.17.15",
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "react": "^17.0.2",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.0.1",
     "react-redux": "^7.2.0",
