--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.0.1",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.1"
